err/minoshiro.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/aiohttp_wrapper'...
Listing './lib/python3.5/site-packages/aiohttp_wrapper-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cssselect'...
Listing './lib/python3.5/site-packages/cssselect-1.0.3.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/minoshiro'...
Listing './lib/python3.5/site-packages/minoshiro/data'...
Listing './lib/python3.5/site-packages/minoshiro/data_controller'...
Compiling './lib/python3.5/site-packages/minoshiro/data_controller/abc.py'...
***   File "./lib/python3.5/site-packages/minoshiro/data_controller/abc.py", line 154
    for site, id_ in id_dict.items()
         ^
SyntaxError: 'await' expressions in comprehensions are not supported

Compiling './lib/python3.5/site-packages/minoshiro/data_controller/postgres_controller.py'...
***   File "./lib/python3.5/site-packages/minoshiro/data_controller/postgres_controller.py", line 92
    return f'{self.schema}.{tables[medium]}'
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minoshiro/data_controller/postgres_utils.py'...
***   File "./lib/python3.5/site-packages/minoshiro/data_controller/postgres_utils.py", line 70
    await pool.execute(tables.format(f'{schema}.{name}'))
                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minoshiro/data_controller/sqlite_controller.py'...
***   File "./lib/python3.5/site-packages/minoshiro/data_controller/sqlite_controller.py", line 147
    sql = (f'SELECT dict, cachetime FROM {tables[medium]} '
                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minoshiro/minoshiro.py'...
***   File "./lib/python3.5/site-packages/minoshiro/minoshiro.py", line 67
    mal_auth = b64encode(f'{mal_user}:{mal_pass}'.encode()).decode()
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minoshiro/pre_cache.py'...
***   File "./lib/python3.5/site-packages/minoshiro/pre_cache.py", line 106
    logger.warning(f'Error raised by Anilist: {e}')
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/minoshiro/web_api'...
Compiling './lib/python3.5/site-packages/minoshiro/web_api/ani_list.py'...
***   File "./lib/python3.5/site-packages/minoshiro/web_api/ani_list.py", line 139
    'query': f'{__get_query_string(medium, query, True)} }}'
                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minoshiro/web_api/anime_planet.py'...
***   File "./lib/python3.5/site-packages/minoshiro/web_api/anime_planet.py", line 52
    'url': (f'http://www.anime-planet.com'
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minoshiro/web_api/kitsu.py'...
***   File "./lib/python3.5/site-packages/minoshiro/web_api/kitsu.py", line 102
    url = f'{self.base_url}/{medium_str}?filter[text]={quote(query)}'
                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minoshiro/web_api/lndb.py'...
***   File "./lib/python3.5/site-packages/minoshiro/web_api/lndb.py", line 29
    params = f'text={query}'
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minoshiro/web_api/mal.py'...
***   File "./lib/python3.5/site-packages/minoshiro/web_api/mal.py", line 35
    url = (f'https://myanimelist.net/api/{medium_str}/'
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/minoshiro-0.1.6.egg-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyquery'...
Listing './lib/python3.5/site-packages/pyquery-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xmltodict-0.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
